# Vulkan-Samples-Deprecated

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  .travis_python.sh  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  README.md  REQUIREMENTS.md  android.bat  build_android.bat  build_android.sh  build_android_gradle.bat  build_android_gradle.sh  build_android_ndk.bat  build_android_ndk.sh
samples/: CMakeLists.txt
samples/apps/atw/: CMakeLists.txt  README.md  atw_cpu_dsp.c  atw_opengl.c  atw_vulkan.c
samples/apps/atw/projects/android/ant/atw_cpu_dsp/: build.bat  build.sh
samples/apps/atw/projects/android/ant/atw_cpu_dsp/jni/: Android.mk
samples/apps/atw/projects/android/ant/atw_opengl/: AndroidManifest.xml  build.bat  build.sh
samples/apps/atw/projects/android/ant/atw_opengl/jni/: Android.mk
samples/apps/atw/projects/android/ant/atw_vulkan/: AndroidManifest.xml  build.bat  build.sh  build.xml
samples/apps/atw/projects/android/ant/atw_vulkan/jni/: Android.mk  Application.mk
samples/apps/atw/projects/android/gradle/atw_cpu_dsp/: build.bat  build.gradle  build.sh
samples/apps/atw/projects/android/gradle/atw_cpu_dsp/gradle/wrapper/: gradle-wrapper.properties
samples/apps/atw/projects/android/gradle/atw_cpu_dsp/jni/: Android.mk  Application.mk
samples/apps/atw/projects/android/gradle/atw_opengl/: AndroidManifest.xml  build.bat  build.gradle  build.sh
samples/apps/atw/projects/android/gradle/atw_opengl/gradle/wrapper/: gradle-wrapper.properties
samples/apps/atw/projects/android/gradle/atw_vulkan/: AndroidManifest.xml  build.bat  build.gradle  build.sh
samples/apps/atw/projects/android/gradle/atw_vulkan/gradle/wrapper/: gradle-wrapper.properties
samples/apps/atw/projects/android/ndk/atw_cpu_dsp/: build.bat  build.sh
samples/apps/atw/projects/android/ndk/atw_cpu_dsp/jni/: Android.mk
samples/apps/atw/projects/android/ndk/atw_opengl/: build.bat  build.sh
samples/apps/atw/projects/android/ndk/atw_opengl/jni/: Android.mk
samples/apps/atw/projects/android/ndk/atw_vulkan/: build.bat  build.sh
samples/apps/atw/projects/android/ndk/atw_vulkan/jni/: Android.mk  Application.mk
samples/apps/atw/projects/hexagon/atw_cpu_dsp/: Makefile  android.min  hexagon.min  objdump.bat  run_dev.bat  run_sim.bat
samples/apps/atw/projects/hexagon/atw_cpu_dsp/glue/: V_android_Debug.min  V_android_Release.min  V_android_ReleaseG.min  V_hexagon_Debug.min  V_hexagon_Debug_dynamic.min  V_hexagon_Debug_dynamic_toolv50.min  V_hexagon_Debug_dynamic_toolv50_v5.min  V_hexagon_Debug_dynamic_toolv51.min  V_hexagon_Debug_dynamic_toolv51_v5.min  V_hexagon_Debug_dynamic_toolv51_v55.min  V_hexagon_Debug_dynamic_toolv72_v60.min  V_hexagon_Debug_dynamic_v5.min  V_hexagon_Debug_toolv50.min  V_hexagon_Debug_toolv50_v5.min  V_hexagon_Debug_toolv51.min  V_hexagon_Debug_toolv51_v5.min  V_hexagon_Debug_toolv51_v55.min  V_hexagon_Debug_toolv72_v60.min  V_hexagon_Debug_v5.min  V_hexagon_Release.min  V_hexagon_ReleaseG.min  V_hexagon_ReleaseG_dynamic.min  V_hexagon_ReleaseG_dynamic_toolv50.min  V_hexagon_ReleaseG_dynamic_toolv50_v5.min  V_hexagon_ReleaseG_dynamic_toolv51.min  V_hexagon_ReleaseG_dynamic_toolv51_v5.min  V_hexagon_ReleaseG_dynamic_toolv51_v55.min  V_hexagon_ReleaseG_dynamic_toolv72_v60.min  V_hexagon_ReleaseG_dynamic_v5.min  V_hexagon_ReleaseG_toolv50.min  V_hexagon_ReleaseG_toolv50_v5.min  V_hexagon_ReleaseG_toolv51.min  V_hexagon_ReleaseG_toolv51_v5.min  V_hexagon_ReleaseG_toolv51_v55.min  V_hexagon_ReleaseG_toolv72_v60.min  V_hexagon_ReleaseG_v5.min  V_hexagon_Release_dynamic.min  V_hexagon_Release_dynamic_toolv50.min  V_hexagon_Release_dynamic_toolv50_v5.min  V_hexagon_Release_dynamic_toolv51.min  (+64 more)
samples/apps/atw/projects/hexagon/atw_cpu_dsp/inc/: TimeWarp.idl
samples/apps/atw/scenes/: scene_gltf.h  scene_perf.h  scene_settings.h  scene_view_state.h
samples/apps/driverinfo/: CMakeLists.txt  README.md  driverinfo_opengl.c  driverinfo_vulkan.c
samples/apps/driverinfo/projects/android/ant/driverinfo_opengl/: AndroidManifest.xml  build.bat  build.sh  build.xml
samples/apps/driverinfo/projects/android/ant/driverinfo_opengl/jni/: Android.mk
samples/apps/driverinfo/projects/android/ant/driverinfo_vulkan/: AndroidManifest.xml  build.bat  build.sh  build.xml
samples/apps/driverinfo/projects/android/gradle/driverinfo_opengl/: AndroidManifest.xml  build.bat  build.gradle  build.sh
samples/apps/driverinfo/projects/android/gradle/driverinfo_vulkan/: AndroidManifest.xml  build.bat  build.gradle  build.sh
samples/apps/driverinfo/projects/android/ndk/driverinfo_opengl/: build.bat  build.sh  build.xml
samples/apps/driverinfo/projects/android/ndk/driverinfo_vulkan/: build.bat  build.sh
samples/apps/driverinfo/projects/android/ndk/driverinfo_vulkan/jni/: Android.mk
samples/layers/glsl_shader/: CMakeLists.txt  README.md  glsl_shader.cpp
samples/layers/glsl_shader/projects/android/gradle/: build.bat  build.gradle  build.sh  settings.gradle
samples/layers/glsl_shader/projects/android/gradle/gradle/wrapper/: gradle-wrapper.properties
samples/layers/glsl_shader/projects/android/ndk/: build.bat  build.sh
samples/layers/glsl_shader/projects/android/ndk/jni/: Android.mk
samples/layers/glsl_shader/projects/linux/: VkLayer_glsl_shader.json
samples/layers/glsl_shader/projects/windows/: VKLayer_glsl_shader.def  VkLayer_glsl_shader.json
samples/layers/queue_muxer/: CMakeLists.txt  README.md  queue_muxer.c  queue_muxer.cpp
samples/layers/queue_muxer/projects/android/ant/: build.bat  build.sh
samples/layers/queue_muxer/projects/android/ant/jni/: Android.mk  Application.mk
samples/layers/queue_muxer/projects/android/gradle/: build.bat  build.gradle  build.sh
samples/layers/queue_muxer/projects/android/gradle/gradle/wrapper/: gradle-wrapper.properties
samples/layers/queue_muxer/projects/android/ndk/: build.bat  build.sh
samples/layers/queue_muxer/projects/android/ndk/jni/: Android.mk
samples/layers/queue_muxer/projects/linux/: VkLayer_queue_muxer.json
samples/layers/queue_muxer/projects/windows/: VKLayer_queue_muxer.def  VkLayer_queue_muxer.json
(+5 files in other folders)
