
if( WIN32 )
    set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Zc:wchar_t /Zc:forScope /Wall /WX" )
elseif( APPLE )
    set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -march=core-avx2 -Wall -Wno-unused-function -Wno-unused-const-variable" )
else()
    set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -march=core-avx2 -Wall -Wno-unused-function -Wno-unused-const-variable" )
endif()

if( WIN32 )
    add_executable( atw_cpu_dsp atw_cpu_dsp.c )
elseif( APPLE )
    add_executable( atw_cpu_dsp atw_cpu_dsp.c )
    target_link_libraries( atw_cpu_dsp m pthread )
else()
    add_executable( atw_cpu_dsp atw_cpu_dsp.c )
    target_link_libraries( atw_cpu_dsp m pthread )
endif()

if( WIN32 )
    add_executable( atw_opengl WIN32 atw_opengl.c )
    target_link_libraries( atw_opengl opengl32 )
elseif( APPLE )
    find_library( COCOA_LIBRARY Cocoa )
    find_library( OPENGL_LIBRARY OpenGL )
    mark_as_advanced( COCOA_LIBRARY OPENGL_LIBRARY )
    set( EXTRA_LIBS ${COCOA_LIBRARY} ${OPENGL_LIBRARY} )
    add_executable( atw_opengl atw_opengl.c )
    target_link_libraries( atw_opengl ${EXTRA_LIBS} )
else()
    add_executable( atw_opengl atw_opengl.c )
    target_link_libraries( atw_opengl m pthread GL ${XLIB_LIBRARIES} ${XCB_LIBRARIES} )
endif()

if( WIN32 )
    add_executable( atw_vulkan WIN32 atw_vulkan.c )
    target_link_libraries( atw_vulkan )
elseif( APPLE )
    find_library( COCOA_LIBRARY Cocoa )
    mark_as_advanced( COCOA_LIBRARY )
    add_executable( atw_vulkan atw_vulkan.c )
    target_link_libraries( atw_vulkan ${EXTRA_LIBS} )
else()
    add_executable( atw_vulkan atw_vulkan.c )
    target_link_libraries( atw_vulkan m pthread dl ${XLIB_LIBRARIES} ${XCB_LIBRARIES} )
endif()
